--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/tdesero/brisk.css@latest/dist/brisk.css"
     />
-    <title>codesandbox</title>
+    <title>SVG Tool</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but codesandbox doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >Sorry! You need javascript enabled to run this Web App.</strong
       >
     </noscript>
     <div id="app"></div>
