--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pictographer</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/tdesero/brisk.css@latest/dist/brisk.css"
